@@ -44,7 +44,7 @@ requires    'URI'                       => 1.40;
 requires    'URI::Escape';
 requires    'Try::Tiny'                 => 0.03;
 
-test_requires 'Test::Exception';
+test_requires 'Test::Fatal';
 test_requires 'Test::More' => 0.88; # for done_testing
 
 # Don't rely on the JSON::Any requirement to pull in a suitable JSON backend.
