@@ -1,3 +1,5 @@
+    - replaced Test::Exception with Test::Fatal in tests
+
 3.15000 2011-02-25
     - added Lists API method members_create_all (alias add_list_members)
     - added tests dependency: Test::Exception (closes RT #65786)
